--- a/Readme
+++ b/Readme
@@ -1,9 +1,10 @@
-#Data Science course material
+# Data Science course material
 This repository conatins course material that I've used in my Data Science course. 
 It is a practical course for grad students (mostly fresh master students).
 I have taught this course at Amirkabir U of Tech, Winter 2020.
-Requirements:
-- Python 3
-- Jupyter Notebook
-- Jupyter lab
-- Other libraries per case such as Dask, Maps, etc.
+
+* Requirements:
+  * Python 3
+  * Jupyter Notebook
+  * Jupyter lab
+  * Other libraries per case such as Dask, Maps, etc.
