--- a/2-NumPy/NumPy Tutorial.ipynb
+++ b/2-NumPy/NumPy Tutorial.ipynb
@@ -1316,6 +1316,26 @@
    "source": [
     "print(a[~np.isnan(a)])"
    ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 94,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "complex128\n",
+      "[2. +6.j 3.5+5.j]\n"
+     ]
+    }
+   ],
+   "source": [
+    "a = np.array([1, 2+6j, 5, 3.5+5j]) \n",
+    "print(a.dtype)\n",
+    "print(a[np.iscomplex(a)])"
+   ]
   }
  ],
  "metadata": {
