--- a/2-NumPy/NumPy Tutorial.ipynb
+++ b/2-NumPy/NumPy Tutorial.ipynb
@@ -9,7 +9,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 3,
+   "execution_count": 1,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -32,12 +32,12 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "[1 2 3]\n"
+      "[1. 2. 3.]\n"
      ]
     }
    ],
    "source": [
-    "a = np.array([1,2,3], dtype='int8')\n",
+    "a = np.array([1,2,3], dtype='float64')\n",
     "print(a)"
    ]
   },
@@ -49,7 +49,7 @@
     {
      "data": {
       "text/plain": [
-       "1"
+       "8"
       ]
      },
      "execution_count": 7,
@@ -63,7 +63,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 8,
+   "execution_count": 11,
    "metadata": {},
    "outputs": [
     {
@@ -76,13 +76,13 @@
     }
    ],
    "source": [
-    "b = np.array([[9.0,8.0,7.0],[6.0,5.0,4.0]])\n",
+    "b = np.array([[9.0,8.0,7.0],[6.0,5.0,4.0]], dtype='float32')\n",
     "print(b)"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 9,
+   "execution_count": 14,
    "metadata": {},
    "outputs": [
     {
@@ -91,7 +91,7 @@
        "2"
       ]
      },
-     "execution_count": 9,
+     "execution_count": 14,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -103,7 +103,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 10,
+   "execution_count": 15,
    "metadata": {},
    "outputs": [
     {
@@ -112,7 +112,7 @@
        "(2, 3)"
       ]
      },
-     "execution_count": 10,
+     "execution_count": 15,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -124,23 +124,23 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 11,
+   "execution_count": 16,
    "metadata": {},
    "outputs": [
     {
      "data": {
       "text/plain": [
-       "dtype('int8')"
+       "dtype('float32')"
       ]
      },
-     "execution_count": 11,
+     "execution_count": 16,
      "metadata": {},
      "output_type": "execute_result"
     }
    ],
    "source": [
     "# Get Type\n",
-    "a.dtype"
+    "b.dtype"
    ]
   },
   {
@@ -166,44 +166,44 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 13,
+   "execution_count": 18,
    "metadata": {},
    "outputs": [
     {
      "data": {
       "text/plain": [
-       "3"
+       "24"
       ]
      },
-     "execution_count": 13,
+     "execution_count": 18,
      "metadata": {},
      "output_type": "execute_result"
     }
    ],
    "source": [
     "# Get total size\n",
-    "a.nbytes"
+    "b.nbytes"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 14,
+   "execution_count": 21,
    "metadata": {},
    "outputs": [
     {
      "data": {
       "text/plain": [
-       "3"
+       "6"
       ]
      },
-     "execution_count": 14,
+     "execution_count": 21,
      "metadata": {},
      "output_type": "execute_result"
     }
    ],
    "source": [
     "# Get number of elements\n",
-    "a.size"
+    "b.size"
    ]
   },
   {
@@ -215,7 +215,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 15,
+   "execution_count": 22,
    "metadata": {},
    "outputs": [
     {
@@ -315,7 +315,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 20,
+   "execution_count": 23,
    "metadata": {},
    "outputs": [
     {
@@ -343,7 +343,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 21,
+   "execution_count": 24,
    "metadata": {},
    "outputs": [
     {
@@ -365,7 +365,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 22,
+   "execution_count": 27,
    "metadata": {},
    "outputs": [
     {
@@ -374,7 +374,7 @@
        "6"
       ]
      },
-     "execution_count": 22,
+     "execution_count": 27,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -386,7 +386,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 23,
+   "execution_count": 32,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -396,7 +396,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 24,
+   "execution_count": 33,
    "metadata": {},
    "outputs": [
     {
@@ -409,7 +409,7 @@
        "        [8, 8]]])"
       ]
      },
-     "execution_count": 24,
+     "execution_count": 33,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -427,29 +427,17 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 25,
+   "execution_count": 38,
    "metadata": {},
-   "outputs": [
-    {
-     "data": {
-      "text/plain": [
-       "array([[0., 0., 0.],\n",
-       "       [0., 0., 0.]])"
-      ]
-     },
-     "execution_count": 25,
-     "metadata": {},
-     "output_type": "execute_result"
-    }
-   ],
+   "outputs": [],
    "source": [
     "# All 0s matrix\n",
-    "np.zeros((2,3))"
+    "c = np.zeros((2,3))"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 26,
+   "execution_count": 41,
    "metadata": {},
    "outputs": [
     {
@@ -468,7 +456,7 @@
        "        [1, 1]]])"
       ]
      },
-     "execution_count": 26,
+     "execution_count": 41,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -618,7 +606,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 89,
+   "execution_count": 51,
    "metadata": {},
    "outputs": [
     {
@@ -650,7 +638,9 @@
     "print(z)\n",
     "\n",
     "output[1:-1,1:-1] = z\n",
-    "print(output)"
+    "print(output)\n",
+    "\n",
+    "# Using for loop is slower"
    ]
   },
   {
@@ -662,7 +652,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 33,
+   "execution_count": 43,
    "metadata": {},
    "outputs": [
     {
@@ -675,6 +665,7 @@
    ],
    "source": [
     "a = np.array([1,2,3])\n",
+    "# b = a\n",
     "b = a.copy()  #b=a won't copy\n",
     "b[0] = 100\n",
     "\n",
@@ -690,7 +681,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 34,
+   "execution_count": 44,
    "metadata": {},
    "outputs": [
     {
@@ -829,7 +820,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 38,
+   "execution_count": 45,
    "metadata": {},
    "outputs": [
     {
@@ -838,7 +829,7 @@
        "array([ 0.84147098,  0.90929743,  0.14112001, -0.7568025 ])"
       ]
      },
-     "execution_count": 38,
+     "execution_count": 45,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -867,7 +858,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 44,
+   "execution_count": 47,
    "metadata": {},
    "outputs": [
     {
@@ -888,7 +879,7 @@
        "       [6., 6.]])"
       ]
      },
-     "execution_count": 44,
+     "execution_count": 47,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -905,7 +896,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 45,
+   "execution_count": 48,
    "metadata": {},
    "outputs": [
     {
@@ -914,7 +905,7 @@
        "1.0"
       ]
      },
-     "execution_count": 45,
+     "execution_count": 48,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -927,16 +918,18 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 48,
+   "execution_count": 49,
    "metadata": {},
    "outputs": [
     {
      "data": {
       "text/plain": [
-       "3.0"
+       "(array([1., 1., 1.]), array([[1., 0., 0.],\n",
+       "        [0., 1., 0.],\n",
+       "        [0., 0., 1.]]))"
       ]
      },
-     "execution_count": 48,
+     "execution_count": 49,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -947,7 +940,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 49,
+   "execution_count": 50,
    "metadata": {},
    "outputs": [
     {
@@ -956,7 +949,7 @@
        "3.0"
       ]
      },
-     "execution_count": 49,
+     "execution_count": 50,
      "metadata": {},
      "output_type": "execute_result"
     }
