--- a/8-Recommender System/RecSys.ipynb
+++ b/8-Recommender System/RecSys.ipynb
@@ -78,6 +78,28 @@
   },
   {
    "cell_type": "code",
+   "execution_count": 7,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "3057"
+      ]
+     },
+     "execution_count": 7,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "articles_df = pd.read_csv('data/shared_articles.csv')\n",
+    "articles_df.head(5)\n",
+    "# len(articles_df['contentId'].unique())"
+   ]
+  },
+  {
+   "cell_type": "code",
    "execution_count": 2,
    "metadata": {},
    "outputs": [
@@ -245,7 +267,6 @@
     }
    ],
    "source": [
-    "articles_df = pd.read_csv('data/shared_articles.csv')\n",
     "articles_df = articles_df[articles_df['eventType'] == 'CONTENT SHARED']\n",
     "articles_df.head(5)"
    ]
