--- a/9-Modern NLP/NLP.ipynb
+++ b/9-Modern NLP/NLP.ipynb
@@ -186,7 +186,7 @@
     "\n",
     "**In this formula, the first part is maximizing the prob. of having similar vector for words in the context window of the center word (i.e. sigmoid of word vectors dot product), and the second part is minimizing the prob. of having similar vector for the center word and words in the negative samples set.**\n",
     "\n",
-    "Here, the gradient computation in each step of the training is no longer related to the dictionary size, but linearly related to $K$. When $K$ takes a smaller constant, the negative sampling has a lower computational overhead for each step.\n"
+    "Here, **the gradient computation in each step of the training is no longer related to the dictionary size, but linearly related to $K$**. When $K$ takes a smaller constant, the negative sampling has a lower computational overhead for each step.\n"
    ]
   },
   {
@@ -202,7 +202,7 @@
     "\n",
     "![The CBOW model cares about the conditional probability of generating the central target word from given context words.  ](cbow.svg)\n",
     "\n",
-    "Since there are multiple context words in the CBOW model, we will average their word vectors and then use the same method as the skip-gram model to compute the conditional probability. We assume that $\\mathbf{v_i}\\in\\mathbb{R}^d$ and $\\mathbf{u_i}\\in\\mathbb{R}^d$ are the context word vector and central target word vector of the word with index $i$ in the dictionary (notice that the symbols are opposite to the ones in the skip-gram model). Let central target word $w_c$ be indexed as $c$, and context words $w_{o_1}, \\ldots, w_{o_{2m}}$ be indexed as $o_1, \\ldots, o_{2m}$ in the dictionary. Thus, the conditional probability of generating a central target word from the given context word is\n",
+    "**Since there are multiple context words in the CBOW model, we will average their word vectors and then use the same method as the skip-gram model to compute the conditional probability**. We assume that $\\mathbf{v_i}\\in\\mathbb{R}^d$ and $\\mathbf{u_i}\\in\\mathbb{R}^d$ are the context word vector and central target word vector of the word with index $i$ in the dictionary (notice that the symbols are opposite to the ones in the skip-gram model). Let central target word $w_c$ be indexed as $c$, and context words $w_{o_1}, \\ldots, w_{o_{2m}}$ be indexed as $o_1, \\ldots, o_{2m}$ in the dictionary. Thus, the conditional probability of generating a central target word from the given context word is\n",
     "\n",
     "$$P(w_c \\mid w_{o_1}, \\ldots, w_{o_{2m}}) = \\frac{\\text{exp}\\left(\\frac{1}{2m}\\mathbf{u}_c^\\top (\\mathbf{v}_{o_1} + \\ldots, + \\mathbf{v}_{o_{2m}}) \\right)}{ \\sum_{i \\in \\mathcal{V}} \\text{exp}\\left(\\frac{1}{2m}\\mathbf{u}_i^\\top (\\mathbf{v}_{o_1} + \\ldots, + \\mathbf{v}_{o_{2m}}) \\right)}.$$\n",
     "\n",
@@ -435,8 +435,8 @@
    "source": [
     "# Before training the word embedding model, we need to define the loss function of the model.\n",
     "# According to the definition of the loss function in negative sampling, we can directly use Gluon's binary cross-entropy loss function SigmoidBinaryCrossEntropyLoss.\n",
-    "# read https://beta.mxnet.io/api/gluon/_autogen/mxnet.gluon.loss.SigmoidBinaryCrossEntropyLoss.html\n",
-    "# Other loss functions: https://beta.mxnet.io/api/gluon/mxnet.gluon.loss.html\n",
+    "# read https://mxnet.apache.org/versions/1.8.0/api/python/docs/api/gluon/loss/index.html#mxnet.gluon.loss.SigmoidBinaryCrossEntropyLoss\n",
+    "# Other loss functions: https://mxnet.apache.org/versions/1.8.0/api/python/docs/api/gluon/loss/index.html\n",
     "\n",
     "loss = gluon.loss.SigmoidBinaryCrossEntropyLoss()"
    ]
@@ -1508,9 +1508,9 @@
    "outputs": [],
    "source": [
     "def knn(W, x, k):\n",
+    "    # W is the set of word vectors, x is the query vector, and k is the paramter for top_k selection\n",
     "    # The added 1e-9 is for numerical stability\n",
-    "    cos = np.dot(W, x.reshape(-1,)) / (\n",
-    "        np.sqrt(np.sum(W * W, axis=1) + 1e-9) * np.sqrt((x * x).sum()))\n",
+    "    cos = np.dot(W, x.reshape(-1,)) / (np.sqrt(np.sum(W * W, axis=1) + 1e-9) * np.sqrt((x * x).sum()))\n",
     "    topk = npx.topk(cos, k=k, ret_typ='indices')\n",
     "    return topk, [cos[int(i)] for i in topk]"
    ]
@@ -1522,6 +1522,7 @@
    "outputs": [],
    "source": [
     "def get_similar_tokens(query_token, k, embed):\n",
+    "    # By idx_to_vec we can obtain the vector representation for the words\n",
     "    topk, cos = knn(embed.idx_to_vec,\n",
     "                    embed.get_vecs_by_tokens([query_token]), k+1)\n",
     "    for i, c in zip(topk[1:], cos[1:]):  # Remove input words\n",
